# growi-mcp

./: .env.sample  .gitignore  LICENSE  README.md  README_jp.md  pyproject.toml
src/growi_mcp/: server.py
