[project]
name = "growi-mcp"
version = "0.1.0"
description = "MCP Server corresponding to Growi, an open-source wiki tool for streamlining information sharing and knowledge management. It executes the various processes—such as page list fetching, page reading, creation, and updates, etc.—via Growi REST API internally."
authors = [
    {name = "ka1222te"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.22.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
license = { file = "LICENSE" }

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0"
]

[project.scripts]
growi-mcp = "growi_mcp.server:main"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["growi_mcp*"]
